# RayTracing

./: CMakeLists.txt  LICENSE  README.md  main.cpp  raytrace.cpp  spheres.tga
RayTracing/: RayTracing.sln
RayTracing/RayTracing/: RayTracing.vcxproj  spheres.tga
RayTracing/RayTracing/src/: main.cpp
RayTracing/RayTracing/x64/Debug/: RayTracing.ilk  vc143.idb
RayTracing/RayTracing/x64/Debug/RayTracing.tlog/: CL.read.1.tlog  RayTracing.lastbuildstate  link.read.1.tlog
RayTracing/RayTracing/x64/Release/RayTracing.tlog/: RayTracing.lastbuildstate
